# fixednets

./: .gitignore  CMakeLists.txt  README.md
src/: approx.cpp  base.hpp  dataset.hpp  error.cpp  error.hpp  fixed_point.hpp  fixednets.hpp  func.cpp  func.hpp  function.hpp  layer.hpp  load.cpp  load.hpp  main.cpp  matrix.cpp  matrix.hpp  network.hpp  types.hpp
src/dataset/: cifar10.cpp  cifar10.hpp  imagenet.cpp  imagenet.hpp  kitti.cpp  kitti.hpp  mnist.cpp  mnist.hpp
src/function/: activation.cpp  activation.hpp  actv.cpp  actv.hpp  approx.cpp  approx.hpp  arithmetic.cpp  arithmetic.hpp  bbox_utils.cpp  bbox_utils.hpp  conv.cpp  conv.hpp  convolution.cpp  convolution.hpp  error.cpp  error.hpp  full.cpp  full.hpp  interpret.cpp  interpret.hpp  lazy.cpp  lazy.hpp  load.cpp  load.hpp  matmul.cpp  matmul.hpp  norm.cpp  norm.hpp  normalization.cpp  normalization.hpp  pool.cpp  pool.hpp  pooling.cpp  pooling.hpp  quantize.cpp  quantize.hpp  transform.cpp  transform.hpp  util.cpp  util.hpp  (+2 more)
src/layer/: BST.cpp  BST.hpp  BatchNormalization.cpp  BatchNormalization.hpp  BinaryConv2D.cpp  BinaryConv2D.hpp  BinaryFull.cpp  BinaryFull.hpp  ConvModule.cpp  ConvModule.hpp  Convolution2D.cpp  Convolution2D.hpp  FireModule.cpp  FireModule.hpp  FullyConnected.cpp  FullyConnected.hpp  LazyConvPool.cpp  LazyConvPool.hpp  MaxPooling.cpp  MaxPooling.hpp  MedianPooling.cpp  MedianPooling.hpp  Rectifier.cpp  Rectifier.hpp  Sigmoid.cpp  Sigmoid.hpp  SoftMax.cpp  SoftMax.hpp  lcpPAD.cpp  lcpPAD.hpp
src/network/: alexnet.cpp  alexnet.hpp  cifar.cpp  cifar.hpp  cifar_batch.cpp  cifar_batch.hpp  cifar_net.cpp  cifar_net.hpp  deeper_cifar.cpp  deeper_cifar.hpp  lenet.cpp  lenet.hpp  lenet_batched.cpp  lenet_batched.hpp  mlp.cpp  mlp.hpp  squeeze_det.cpp  squeeze_det.hpp  vgg.cpp  vgg.hpp
test/: CMakeLists.txt  test_convolution.cpp  test_utility.cpp
utils/: dump.py
utils/kitti-eval/cpp/: evaluate_object.cpp
